name:                chorus-api
version:             0.0.0.1
homepage:            http://github.com/jsdw/chorus-api
license:             BSD3
license-file:        LICENSE
author:              James Wilson
maintainer:          me@unbui.lt
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Chorus.Api
                    , Chorus.Assets
                    , Chorus.Assets.Types
  ghc-options:       -Wall
                     -fno-warn-type-defaults
                     -fno-warn-orphans
  default-extensions: OverloadedStrings
                    , RankNTypes
                    , ScopedTypeVariables
                    , FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , MultiParamTypeClasses
                    , RecordWildCards
  build-depends:      base >= 4.7 && < 5
                    , containers
                    , aeson
                    , transformers
                    , mtl
                    , http-client
                    , http-client-tls
                    , http-types
                    , text
                    , lens-aeson
                    , lens
                    , bytestring
                    , wreq
                 -- , attoparsec
                 -- , aeson-pretty
                 -- , haskeline
                 -- , filepath
                 -- , free
                 -- , unix
                 -- , data-default
                 -- , directory
  default-language:   Haskell2010

test-suite chorus-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chorus-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jsdw/chorus-api
